<resources>
    <string name="app_name">Guatemala</string>
    <string name="guate_info">
        Guatemala, es el Corazón del Mundo Maya.
        \nViva, mágica, mística y ancestral.
        \nSu historia se remonta a cuatro mil años, cuando emergió la civilización maya,
        \ncuyo legado perdura hoy en día con las tradiciones y cultura de su gente.

        \n\nGuatemala es un país de extraordinaria
        \nriqueza cultural y natural y con una
        \nubicación geográfica privilegiada.
        \nLas distancias de lugar a lugar son cortas,
        \nlo que permite visitar varias regiones en un mismo viaje.

        \n\nEs un país único, de aventura, inolvidable,
        \nentre su pasado y presente,
        \nademás de la diversidad de actividades
        \nque ofrece al visitante.
        \nConocido como el país de la eterna primavera,
        \ngoza de un clima agradable que
        \npermite visitarlo en cualquier época del año.\n
    </string>
    <string name="rio_dulce">Rio Dulce</string>
    <string name="semuc_champey">Semuc Champey</string>
    <string name="xocomil">Xocomil</string>
    <string name="nombre">Nombre</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="guatemala">Guatemala</string>
    <string name="xocomil_phrase">
        Considerado
        \nuno de
        \nlos más
        \ninnovadores
        \ny atractivos
        \nparques
        \nde
        \nAmérica
        \nLatina.\n</string>
    <string name="secum_champey_phrase">
        Donde
        \nel río
        \nse
        \nesconde
    </string>
    <string name="rio_phrase">
        Refugio
        \npara
        \ndiversas
        \naves
        \nnativas y
        \nmigratorias
    </string>
    <string name="xocomil_info">
        Bienvenido al paraíso de
        \nla Fiesta en el Agua,
        \nParque Acuático Xocomil
        \nes el lugar perfecto
        \npara disfrutar de los
        \nmás impresionantes juegos
        \nacuáticos en medio de
        \nuna exuberante vegetación
        \ny estilo arquitectónico maya.

        \nOfrece modernas instalaciones
        \ncomo toboganes,piscinas de
        \nolas, ríos artificiales,
        \nrestaurantes y kioscos;
        \ncomodidades y calidad de
        \nclase mundial.

        \nCuenta con los
        \nsiguientes servicios:
        \nalquiler de chalecos salvavidas,
        \nalquiler de lockers,
        \nprimeros auxilios,
        \nvestidores y duchas,
        \nalquiler de carruajes,
        \ncajero automático y
        \nparqueo exclusivo entre otros.

        \nEl Parque Acuático Xocomil
        \nforma parte del IRTRA,
        \ninstitución el cual brinda
        \nservicios de
        \nhospedaje, alimentación
        \ny recreación.\n</string>
    <string name="semuc_champey_info">
        El Parque Nacional Semuc
        \nChampey es un paraíso
        \nnatural que se encuentra
        \nlocalizado en Cobán,
        \nAlta Verapaz, muy próximo
        \ngeográficamente al
        \nParque Nacional Grutas
        \nde Lanquín, en la
        \nRepública de Guatemala.

        \nEn idioma q’eqchi’
        \nsignifica “donde el río
        \nse esconde“,
        \ndebido a que en uno
        \nde los extremos
        \nse puede observar cómo
        \nel caudaloso río Cahabón
        \nse interna en un caverna
        \nde piedra caliza,
        \nen donde pasa por
        \ndebajo de las pozas.

        \nEl lugar es un atractivo
        \nturístico del departamento
        \nde Alta Verapaz y de la
        \nRepública de Guatemala.
        \nSe encuentra en un valle
        \ncon laderas de alta
        \npendiente, bordeado
        \npor un borde tropical
        \ncon una gran variedad de flora.\n</string>
    <string name="rio_dulce_info">
        El Río Dulce se encuentra
        \nen el departamento de
        \nIzabal, entre el Lago de
        \nIzabal y la Bahía de Amatique.
        \nDe alrededor de 43 kilómetros
        \nde largo, el Río Dulce es
        \nla puerta de entrada
        \nal Mar Caribe.

        \nEl cañón en la
        \ndesembocadura del río
        \nsobre la bahía ofrece una
        \nbelleza escénica singular
        \npor su vegetación y por ser
        \nrefugio para diversas aves
        \nnativas y migratorias.
        \nPara recorrer los 16 km
        \nque distan entre el
        \ngolfete y el mar, las
        \naguas del río se introducen
        \npor un enorme cañón
        \nque separa las montañas
        \ndonde altas paredes de
        \nrocas calizas con exuberante
        \nvegetación hacen del
        \nrecorrido una aventura.
        \nEste río tiene una
        \nprofundidad de 30 a 50 metros,
        \ny un ancho de
        \naproximadamente de 200 metros.\n </string>
    <string name="xocomil_title">Xocomil</string>
    <string name="semuc_title">Semuc Champey</string>
    <string name="rio_title">Rio Dulce</string>
    <string name="title_activity_touristic_places">TouristicPlaces</string>
    <string name="CommentButton">Comentar</string>
    <string name="commentHint">Agrega tu comentario</string>
    <string name="about_me">
        Mi nombre es Andrea Amaya,
        \nnací el 30 de enero de 2002,
        \nen Guatemala, Guatemala.
        \nActualmente estudio Ing. en
        \nComputación en la UVG.
        \nSoy una persona perseverante,
        \ndecidada y responsable.
        \nMe gusta socializar con
        \npersonas nuevas y
        \nayudar a mi mamá en la pastelería.
    </string>
    <string name="acerca_de">Andrea Amaya</string>
    <string name="regresar">Regresar</string>

</resources>
