<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentTitle">

    <data>
        <variable
            name = "name"
            type = "String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:screenOrientation="portrait"
        tools:context=".Activities.MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="415dp"
            android:layout_height="118dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/guate" />

        <Button
            android:id="@+id/buttonRioDulce"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/rio_dulce"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/buttonSemuc"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/semuc_champey"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonRioDulce"
            app:layout_constraintEnd_toStartOf="@+id/buttonRioDulce"
            app:layout_constraintStart_toEndOf="@+id/buttonXocomil" />

        <Button
            android:id="@+id/buttonXocomil"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/xocomil"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonSemuc"
            app:layout_constraintEnd_toStartOf="@+id/buttonSemuc"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/nombre"
            style="@style/TextStyle"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="185dp"
            android:text="@string/nombre"
            app:layout_constraintBottom_toTopOf="@+id/scrollViewMain"
            app:layout_constraintEnd_toStartOf="@+id/name_value"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.51" />

        <EditText
            android:id="@+id/name_value"
            android:layout_width="212dp"
            android:layout_height="38dp"
            android:layout_marginTop="180dp"
            android:ems="10"
            android:hint="@string/ingrese_su_nombre"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/scrollViewMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.763"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/starButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/starbutton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.778"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.132" />

        <TextView
            android:id="@+id/GuatemalaName"
            style="@style/SubtitleMainActivity"
            android:layout_width="232dp"
            android:layout_height="43dp"
            android:layout_marginStart="24dp"
            android:text="@{name ?? @string/guatemala}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/starButton"
            app:layout_constraintVertical_bias="0.0" />

        <ScrollView
            android:id="@+id/scrollViewMain"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/buttonSemuc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/starButton"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="@dimen/padding_regular">

                <TextView
                    android:id="@+id/guateInfo"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/guate_info"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>